fixed words break in chats and descriptions

--- a/css/common-specific-group.css
+++ b/css/common-specific-group.css
@@ -207,7 +207,12 @@ button:disabled {
 .message p {
     margin: 5px 0 0 0;
     font-size: 1rem;
-    word-break: break-all;
+
+    word-break: normal;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    line-height: 1.4;
 }
 
 #chat-form {
@@ -269,9 +274,9 @@ textarea {
     white-space: pre-wrap;      
     
     /* Forza la rottura delle parole */
-    overflow-wrap: break-word;  
-    word-wrap: break-word;      
-    word-break: break-all;
+    word-break: normal;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
     
     /* Assicura che il paragrafo non superi mai la larghezza del padre */
     max-width: 100%;            
